Document `FOR`, `BREAK`, `CONTINUE` and `THROW` statements

--- a/app/templates/docs.hbs
+++ b/app/templates/docs.hbs
@@ -100,6 +100,12 @@
 			(route-name) "docs.surrealql.statements.commit" }} />
 		<Layout::Helm::Menu::Item @link="docs.surrealql.statements.ifelse" @text="IF ELSE" selected={{begs-with
 			(route-name) "docs.surrealql.statements.ifelse" }} />
+		<Layout::Helm::Menu::Item @link="docs.surrealql.statements.for" @text="FOR" selected={{begs-with
+			(route-name) "docs.surrealql.statements.for" }} />
+		<Layout::Helm::Menu::Item @link="docs.surrealql.statements.break" @text="BREAK" selected={{begs-with
+			(route-name) "docs.surrealql.statements.break" }} />
+		<Layout::Helm::Menu::Item @link="docs.surrealql.statements.continue" @text="CONTINUE" selected={{begs-with
+			(route-name) "docs.surrealql.statements.continue" }} />
 		<Layout::Helm::Menu::Item @link="docs.surrealql.statements.select" @text="SELECT" selected={{begs-with
 			(route-name) "docs.surrealql.statements.select" }} />
 		<Layout::Helm::Menu::Item @link="docs.surrealql.statements.live-select" @text="LIVE SELECT" selected={{begs-with
@@ -152,6 +158,8 @@
 			(route-name) "docs.surrealql.statements.info" }} />
 		<Layout::Helm::Menu::Item @link="docs.surrealql.statements.sleep" @text="SLEEP" selected={{begs-with
 			(route-name) "docs.surrealql.statements.sleep" }} />
+		<Layout::Helm::Menu::Item @link="docs.surrealql.statements.throw" @text="THROW" selected={{begs-with
+			(route-name) "docs.surrealql.statements.throw" }} />
 	</subs>
 
 	<Layout::Helm::Menu::Item @link="docs.surrealql.functions" @text="Functions" selected={{begs-with
