Document `DEFAULT` clause

--- a/app/templates/docs/surrealql/statements/define/field.hbs
+++ b/app/templates/docs/surrealql/statements/define/field.hbs
@@ -52,6 +52,9 @@
 	<Code @name="docs/surrealql/statements/define/field/optional-field.surql" />
 
 	<h4>Setting a default value</h4>
+	<Code @name="docs/surrealql/statements/define/field/default-field.surql" />
+
+	<h4>Alter a passed value</h4>
 	<Code @name="docs/surrealql/statements/define/field/value-field.surql" />
 
 	<h4>Asserting rules on fields</h4>
