Fix broken links

--- a/app/templates/docs/surrealql/statements/index.hbs
+++ b/app/templates/docs/surrealql/statements/index.hbs
@@ -60,7 +60,7 @@
 			<p>Used to break out of a loop</p>
 		</Layout::Boxes::Item>
 	</LinkTo>
-	<LinkTo @route="docs.surrealql.statements.cONTINUE">
+	<LinkTo @route="docs.surrealql.statements.continue">
 		<Layout::Boxes::Item mini hover>
 			<h4><code>CONTINUE</code> statement</h4>
 			<p>Used to skip an iteration in a loop</p>
@@ -143,7 +143,7 @@
 			<h4><code>SLEEP</code> statement</h4>
 			<p>Delays or pauses in the execution of a query or a batch</p>
 		</Layout::Boxes::Item>
-		<LinkTo @route="docs.surrealql.statements.tHROW">
+		<LinkTo @route="docs.surrealql.statements.throw">
 			<Layout::Boxes::Item mini hover>
 				<h4><code>THROW</code> statement</h4>
 				<p>Used to throw custom errors</p>
