--- a/app/styles/components/feedback-form.scss
+++ b/app/styles/components/feedback-form.scss
@@ -10,12 +10,47 @@
     }
 }
 
+sidebar {
+    .feedback {
+        display: block;
+        width: 100%;
+        margin: 20px 0 0 0;
+
+        .feedback-button {
+            width: 100%;
+            font-size: 18px;
+            padding: 20px 0;
+            height: auto;
+            background: #343946;
+            box-shadow: 0px 0px 120px var(--generate-button-shadow-wide, transparent), 0px 4px 12px rgba(0, 0, 0, 0.05), 0px 1px 2px rgba(0, 0, 0, 0.1), inset 0px 1px 1px var(--generate-button-shadow-inset, rgba(255, 255, 255, 0.1)), 0 0 0 var(--generate-button-shadow-outline, 0px) rgba(109, 68, 244, 0.4);
+
+            &:hover {
+                transform:scale(1.06);
+                color:var(--text-color);
+                --generate-button-shadow-inset:rgba(255,255,255,0.7);
+                background:linear-gradient(-60deg, rgba(135,0,255,1), rgba(255,0,158,1));
+                box-shadow:0 0 30px rgba(255,0,158,0.5), 0 4px 12px rgba(0,0,0,0.05), 0 0 0 4px rgba(150,0,255,0.3), inset 0px 1px 1px var(--generate-button-shadow-inset, rgba(255, 255, 255, 0.1)), 0 0 0 var(--generate-button-shadow-outline, 0px) rgba(109, 68, 244, 0.4);
+            }
+        }
+    }
+}
+
 .feedback-button {
     height: 40px;
     display: flex;
     white-space: nowrap;
     border-radius: 50px;
     background: var(--boxes-color);
+    color: var(--faint-color);
+    
+    & i {
+        color:transparent;
+        @include graded;
+    }
+
+    &:hover i {
+        color: var(--text-color);
+    }
 }
 
 .feedback-form {
