--- a/app/components/feedback-form/template.hbs
+++ b/app/components/feedback-form/template.hbs
@@ -36,7 +36,7 @@
 							rows='5'
 							name='feedback'
 							id='feedback-input'
-							placeholder='What are your thoughts'
+							placeholder='What are your thoughts?'
 						/>
 						<button
 							type='button'
@@ -63,7 +63,7 @@
 									></i>
 								</div>
 								<div>
-									<p>Something Went Wrong. Please try again
+									<p>Something went wrong. Please try again
 										later.
 									</p>
 								</div>
