Add example for updatedAt field

--- a/app/templates/docs/surrealql/statements/define/field.hbs
+++ b/app/templates/docs/surrealql/statements/define/field.hbs
@@ -55,6 +55,10 @@
 	<Code @name="docs/surrealql/statements/define/field/default-field.surql" />
 
 	<h4>Alter a passed value</h4>
+	<p>
+		The <code>VALUE</code> clause is executed when a record either created or updated.
+		The field value is set to whatever the expression returns.
+	</p>
 	<Code @name="docs/surrealql/statements/define/field/value-field.surql" />
 
 	<h4>Asserting rules on fields</h4>
